added current word score indicator and double word slot

--- a/hw8_improving/graphics_data/index_hw8.html
+++ b/hw8_improving/graphics_data/index_hw8.html
@@ -44,7 +44,11 @@
     <div id="indicators" class="row ui-droppable d-flex justify-content-center">
 
       <div id="score" class="ui-widget-content">
-        <h>Score: 0</h>
+        <h>Total Score: 0</h>
+      </div>
+
+      <div id="wordScore" class="ui-widget-content">
+        <h>Word Score: 0</h>
       </div>
 
       <div id="tilesLeft" class="ui-widget-content">
